# mdk-compose

./: .gitignore  README.md  build.gradle.kts  gradle.properties  settings.gradle.kts
.fleet/: receipt.json
.github/workflows/: release.yml
composeApp/: KotlinApp.podspec  build.gradle.kts
composeApp/src/androidMain/: AndroidManifest.xml
composeApp/src/androidMain/kotlin/fr/dcs/mdk/: MainActivity.kt  TestApplication.kt  Utils.android.kt
composeApp/src/androidMain/res/values/: strings.xml
composeApp/src/commonMain/kotlin/: App.kt
composeApp/src/commonMain/kotlin/fr/dcs/mdk/: App.kt  Navigation.kt  PlayerScreen.kt  RootScreen.kt  Utils.kt
composeApp/src/desktopMain/kotlin/: main.kt
composeApp/src/iosMain/kotlin/: MainViewController.kt
composeApp/src/iosMain/kotlin/fr/dcs/mdk/: Utils.ios.kt
gradle/: libs.versions.toml
iosApp/: Podfile
iosApp/Configuration/: Config.xcconfig
iosApp/iosApp/: ContentView.swift
iosApp/iosApp.xcodeproj/: project.pbxproj
mdk-compose/: build.gradle.kts
mdk-compose/src/androidMain/cpp/: CMakeLists.txt
mdk-compose/src/androidMain/cpp/mdk-kotlin/: java_listener.hpp  prepare_exception.hpp  utils.cpp  utils.hpp
mdk-compose/src/androidMain/cpp/mdk-sdk/: mdk.pri
mdk-compose/src/androidMain/cpp/mdk-sdk/include/mdk/: Player.h
mdk-compose/src/androidMain/cpp/mdk-sdk/lib/cmake/: FindMDK.cmake
mdk-compose/src/androidTest/java/fr/dcs/mdk/: ExampleInstrumentedTest.kt
mdk-kotlin/: build.gradle.kts
mdk-kotlin/src/androidMain/cpp/: CMakeLists.txt
mdk-kotlin/src/androidMain/cpp/mdk-kotlin/: mdk.jni.cpp  mdk_jni.cpp  player_wrapper.cpp  player_wrapper.hpp  thread_queue.hpp  utils.cpp  utils.hpp
(+65 files in other folders)
